--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video id="Dog" autoplay loop muted playsinline id="bg-video" style="position: fixed; right: 0; bottom: 0; min-width: 100vw; min-height: 100vh; z-index: -1; object-fit: cover;">
+        <source src="Dogimage.jpg.mp4" type="video/mp4">
+    </video>
+</video>
     <div class="msg-container hide">
         <p id="msg">Winner</p>
         <button id="new-btn">New Game</button>
@@ -29,5 +33,6 @@
         <button id="reset-btn">Reset Game</button>
     </main>
     <script src="app.js"></script>
+    <audio controls autoplay loop src="supremsong.aac" id="AudioHN"></audio>
 </body>
 </html>
